// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`db: index (connection and utils) #save, #get, #query should save, get, and delete 1`] = `
Object {
  "email": "geraldine@example.com",
  "name": "geraldine",
  "password": "$2a$04$Ct0xAxbyVu.TtDHm7fDpGe3ixNA8gjjDM/h6Pq69FyPevlr/pd5qm",
  "settings": Object {
    "email_frequency": "daily",
  },
}
`;

exports[`db: index (connection and utils) #save, #get, #query should save, get, and delete 2`] = `
Object {
  "email": "geraldine@example.com",
  "name": "geraldine",
  "password": "$2a$04$Ct0xAxbyVu.TtDHm7fDpGe3ixNA8gjjDM/h6Pq69FyPevlr/pd5qm",
  "settings": Object {
    "email_frequency": "daily",
  },
}
`;

exports[`db: index (connection and utils) #save, #get, #query should save, get, and delete 3`] = `undefined`;

exports[`db: index (connection and utils) #saveList, #list, #query should savelist, list, and delete 1`] = `
Array [
  Object {
    "email": "geraldine@example.com",
    "name": "geraldine",
    "password": "$2a$04$Ct0xAxbyVu.TtDHm7fDpGe3ixNA8gjjDM/h6Pq69FyPevlr/pd5qm",
    "settings": Object {
      "email_frequency": "daily",
    },
  },
]
`;

exports[`db: index (connection and utils) #saveList, #list, #query should savelist, list, and delete 2`] = `
Array [
  Object {
    "email": "geraldine@example.com",
    "name": "geraldine",
    "password": "$2a$04$Ct0xAxbyVu.TtDHm7fDpGe3ixNA8gjjDM/h6Pq69FyPevlr/pd5qm",
    "settings": Object {
      "email_frequency": "daily",
    },
  },
]
`;

exports[`db: index (connection and utils) #saveList, #list, #query should savelist, list, and delete 3`] = `Array []`;
